--- a/src/view/frontend/web/template/checkout/company-switcher.html
+++ b/src/view/frontend/web/template/checkout/company-switcher.html
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright © 2016 H&O E-commerce specialisten B.V. (http://www.h-o.nl/)
+  ~ Copyright © Reach Digital (https://www.reachdigital.io/)
   ~ See LICENSE.txt for license details.
   -->
 <div class="field">
