--- a/src/view/adminhtml/layout/sales_order_view.xml
+++ b/src/view/adminhtml/layout/sales_order_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-  ~ Copyright © 2017 H&O E-commerce specialisten B.V. (http://www.h-o.nl/)
+  ~ Copyright © Reach Digital (https://www.reachdigital.io/)
   ~ See LICENSE.txt for license details.
   -->
 
